--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -5,6 +5,12 @@
     border-radius: 15px;
     background-color: $almost-white;
     border: 1px solid #686868;
+    cursor: pointer;
     @include flex-group(flex, center, center);
-    @include typography(14px, 400, 16px, normal, $medium-grey)
+    @include typography(14px, 400, 16px, normal, $medium-grey);
+
+    @include medium {
+        width: 100px;
+        height: 38px;
+    }
 }
