--- a/sass/export/_main.scss
+++ b/sass/export/_main.scss
@@ -12,6 +12,7 @@
 @import "../components/buttons";
 @import "../components/nabvar";
 @import "../components/dropdown";
+@import "../components/logo";
 
 //pages
 @import "../pages/home";
