--- a/css/styles.css
+++ b/css/styles.css
@@ -159,15 +159,39 @@ body {
   position: relative;
   display: inline-block;
 }
+.dropdown .dropdown-item .arrow-icon {
+  transition: transform 0.3s ease;
+}
+.dropdown .dropdown-item .arrow-rotate {
+  transform: rotate(180deg);
+}
 .dropdown .dropdown-content {
   position: absolute;
   width: 153px;
   height: 160px;
-  background-color: pink;
   z-index: 1;
   margin-top: 20px;
   right: 0;
   display: none;
+  border-radius: 10px;
+  background: #FFF;
+  box-shadow: 0px 10px 40px 0px rgba(0, 0, 0, 0.15);
+  /* display: flex;
+  flex-direction: column;
+  justify-content: space-between; */
+  padding: 24px;
+}
+.dropdown .dropdown-content li a {
+  list-style: none;
+  text-decoration: none;
+}
+.dropdown .dropdown-content img {
+  margin-right: 15px;
+}
+.dropdown .dropdown-content.dropdown-content--company {
+  width: 116px;
+  height: 128px;
+  left: 0;
 }
 .dropdown .dropdown-content.dropdown-content--show {
   display: block;
