--- a/sass/components/_dropdown.scss
+++ b/sass/components/_dropdown.scss
@@ -49,16 +49,45 @@
     position: relative;
     display: inline-block;
 
+    .dropdown-item {
+        .arrow-icon {
+            transition: transform 0.3s ease; //Para que la transicion sea suave
+        }
+        .arrow-rotate {
+            transform: rotate(180deg); //rota la flecha 180grados
+        }
+    }
+
     .dropdown-content {
         position: absolute;
         width: 153px;
         height: 160px;
-        background-color: pink;
         z-index: 1;
         margin-top: 20px;
         right: 0;
-
         display: none;
+        border-radius: 10px;
+        background: $white;
+        box-shadow: 0px 10px 40px 0px rgba(0, 0, 0, 0.15);
+        /* display: flex;
+        flex-direction: column;
+        justify-content: space-between; */
+        padding: 24px;
+        
+
+        li a {
+            list-style: none;
+            text-decoration: none;
+        }
+        img {
+            margin-right: 15px;
+        }
+
+        &.dropdown-content--company {
+            width: 116px;
+            height: 128px;
+            left: 0;
+        }
 
         &.dropdown-content--show {
             display: block;
