--- a/css/styles.css
+++ b/css/styles.css
@@ -176,14 +176,15 @@ body {
   border-radius: 10px;
   background: #FFF;
   box-shadow: 0px 10px 40px 0px rgba(0, 0, 0, 0.15);
-  /* display: flex;
-  flex-direction: column;
-  justify-content: space-between; */
   padding: 24px;
 }
 .dropdown .dropdown-content li a {
-  list-style: none;
   text-decoration: none;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 16px;
+  color: #686868;
 }
 .dropdown .dropdown-content img {
   margin-right: 15px;
@@ -195,6 +196,9 @@ body {
 }
 .dropdown .dropdown-content.dropdown-content--show {
   display: block;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .logo {
