--- a/sass/components/_dropdown.scss
+++ b/sass/components/_dropdown.scss
@@ -69,15 +69,16 @@
         border-radius: 10px;
         background: $white;
         box-shadow: 0px 10px 40px 0px rgba(0, 0, 0, 0.15);
-        /* display: flex;
-        flex-direction: column;
-        justify-content: space-between; */
         padding: 24px;
         
 
         li a {
-            list-style: none;
             text-decoration: none;
+            font-size: 14px;
+            font-style: normal;
+            font-weight: 400;
+            line-height: 16px;
+            color: $medium-grey;
         }
         img {
             margin-right: 15px;
@@ -91,6 +92,9 @@
 
         &.dropdown-content--show {
             display: block;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
         }
     }
 }
