--- a/css/styles.css
+++ b/css/styles.css
@@ -38,6 +38,17 @@ body {
     height: 38px;
   }
 }
+.button.button--black {
+  width: 163px;
+  height: 56px;
+  background-color: #151515;
+  color: #FAFAFA;
+}
+.button.button--black:hover {
+  border: 1px solid #151515;
+  background-color: transparent;
+  color: #151515;
+}
 
 .nabvar {
   width: 100vw;
@@ -111,50 +122,6 @@ body {
   color: #151515;
 }
 
-/* .item__dropdown {
-    width: 10.63%;
-    height: auto;
-    padding: 24px;
-    top: 76px;
-    position: absolute;
-    left: 120px;
-    background: $white;
-    border-radius: 10px;
-    box-shadow: 0px 10px 40px 0px rgba(0, 0, 0, 0.15);
-    @include flex-group(flex, center, center);
-
-    &.item__dropdown--company {
-        width: 8.06%;
-        left: 352px;
-    }
-    .dropdown__list {
-        list-style: none;
-        display: flex;
-        flex-direction: column;
-        li:not(:last-child){
-            margin-bottom: 16px;
-        }
-        li {
-            img {
-                margin-right: 15px;
-            }
-        }
-    }
-} */
-/* 
-<ul class="dropdown__list">
-    <li><img src="./img/List.svg" alt="">Todo List</li>
-    <li><img src="./img/calendar.svg" alt="">Calendar</li>
-    <li><img src="./img/Bell.svg" alt="">Reminders</li>
-    <li><img src="./img/planning.svg" alt="">Planning</li>
-</ul>
-
-<ul class="dropdown__list">
-    <li>History</li>
-    <li>Our Team</li>
-    <li>Blog</li>
-</ul>
-*/
 .dropdown {
   position: relative;
   display: inline-block;
@@ -166,27 +133,30 @@ body {
   transform: rotate(180deg);
 }
 .dropdown .dropdown-content {
-  position: absolute;
   width: 153px;
   height: 160px;
-  z-index: 1;
   margin-top: 20px;
-  right: 0;
-  display: none;
   border-radius: 10px;
+  right: 0;
+  position: absolute;
+  z-index: 1;
   background: #FFF;
-  box-shadow: 0px 10px 40px 0px rgba(0, 0, 0, 0.15);
   padding: 24px;
+  display: none;
+  box-shadow: 0px 10px 40px 0px rgba(0, 0, 0, 0.15);
 }
-.dropdown .dropdown-content li a {
+.dropdown .dropdown-content .dropdown__link {
   text-decoration: none;
   font-size: 14px;
-  font-style: normal;
   font-weight: 400;
   line-height: 16px;
+  font-style: normal;
   color: #686868;
 }
-.dropdown .dropdown-content img {
+.dropdown .dropdown-content .dropdown__link:hover {
+  color: #151515;
+}
+.dropdown .dropdown-content .dropdown__link .dropdown__img {
   margin-right: 15px;
 }
 .dropdown .dropdown-content.dropdown-content--company {
@@ -196,9 +166,10 @@ body {
 }
 .dropdown .dropdown-content.dropdown-content--show {
   display: block;
-  display: flex;
   flex-direction: column;
+  display: flex;
   justify-content: space-between;
+  align-items: start;
 }
 
 .logo {
@@ -211,6 +182,61 @@ body {
   width: 100vw;
   height: 100vh;
   background-color: #FAFAFA;
+}
+.main .nabvar {
+  margin-bottom: 46px;
+}
+.main .hero {
+  width: 100%;
+  height: auto;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.main .hero .hero__description {
+  width: 37.5%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  align-self: flex-end;
+}
+.main .hero .hero__description .hero__texts {
+  margin-bottom: 118px;
+}
+.main .hero .hero__description .hero__texts .hero__title {
+  width: 98.15%;
+  margin-bottom: 48px;
+  letter-spacing: -1.111px;
+  font-size: 80px;
+  font-weight: 700;
+  line-height: 80px;
+  font-style: normal;
+  color: #151515;
+}
+.main .hero .hero__description .hero__texts .hero__paragraph {
+  width: 88.33%;
+  margin-bottom: 51px;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 28px;
+  font-style: normal;
+  color: #686868;
+}
+.main .hero .hero__description .hero__icons {
+  width: 88.52%;
+  height: auto;
+  flex-wrap: wrap;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.main .hero .hero__img {
+  width: 33.33%;
+  /* height: 640px; */
+  display: flex;
+}
+.main .hero .hero__img img {
+  width: 100%;
 }
 
 /*# sourceMappingURL=styles.css.map */
