--- a/sass/components/_dropdown.scss
+++ b/sass/components/_dropdown.scss
@@ -1,50 +1,3 @@
-/* .item__dropdown {
-    width: 10.63%;
-    height: auto;
-    padding: 24px;
-    top: 76px;
-    position: absolute;
-    left: 120px;
-    background: $white;
-    border-radius: 10px;
-    box-shadow: 0px 10px 40px 0px rgba(0, 0, 0, 0.15);
-    @include flex-group(flex, center, center);
-
-    &.item__dropdown--company {
-        width: 8.06%;
-        left: 352px;
-    }
-    .dropdown__list {
-        list-style: none;
-        display: flex;
-        flex-direction: column;
-        li:not(:last-child){
-            margin-bottom: 16px;
-        }
-        li {
-            img {
-                margin-right: 15px;
-            }
-        }
-    }
-} */
-
-/* 
-<ul class="dropdown__list">
-    <li><img src="./img/List.svg" alt="">Todo List</li>
-    <li><img src="./img/calendar.svg" alt="">Calendar</li>
-    <li><img src="./img/Bell.svg" alt="">Reminders</li>
-    <li><img src="./img/planning.svg" alt="">Planning</li>
-</ul>
-
-<ul class="dropdown__list">
-    <li>History</li>
-    <li>Our Team</li>
-    <li>Blog</li>
-</ul>
-*/
-
-
 .dropdown {
     position: relative;
     display: inline-block;
@@ -59,29 +12,29 @@
     }
 
     .dropdown-content {
-        position: absolute;
         width: 153px;
         height: 160px;
-        z-index: 1;
         margin-top: 20px;
-        right: 0;
-        display: none;
         border-radius: 10px;
+        right: 0;
+        position: absolute;
+        z-index: 1;
         background: $white;
-        box-shadow: 0px 10px 40px 0px rgba(0, 0, 0, 0.15);
         padding: 24px;
+        display: none;
+        box-shadow: 0px 10px 40px 0px rgba(0, 0, 0, 0.15);
         
 
-        li a {
+        .dropdown__link {
             text-decoration: none;
-            font-size: 14px;
-            font-style: normal;
-            font-weight: 400;
-            line-height: 16px;
-            color: $medium-grey;
-        }
-        img {
-            margin-right: 15px;
+            @include typography(14px, 400, 16px, normal, $medium-grey);
+
+            &:hover {
+                color: $black;
+            }
+            .dropdown__img {
+                margin-right: 15px;
+            }
         }
 
         &.dropdown-content--company {
@@ -92,9 +45,8 @@
 
         &.dropdown-content--show {
             display: block;
-            display: flex;
             flex-direction: column;
-            justify-content: space-between;
+            @include flex-group(flex, space-between, start);
         }
     }
 }
