--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -12,25 +12,76 @@
         height: 75%;
         @include flex-group(flex, space-evenly, center);
 
+        @include medium {
+            flex-direction: column;
+            height: auto;
+        }
+
         .hero__description {
             width: 37.5%;
             height: auto;
             display: flex;
-            flex-direction: column;
             align-self: flex-end;
+            flex-direction: column;
+
+            @include xl-large {
+                width: 45%;
+            }
+
+            @include xxl-large {
+                width: 45%;
+            }
+
+            @include medium {
+                width: 100%;
+                order: 2;
+                align-items: center;
+            }
 
             .hero__texts {
                 margin-bottom: 118px;
+                @include xl-large {
+                    margin-bottom: 80px;
+                }
+                @include medium {
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    margin-bottom: 48px;
+                    padding: 0 16px;
+                    width: 100%;
+                }
                 .hero__title {
                     width: 98.15%;
                     margin-bottom: 48px;
                     letter-spacing: -1.111px;
                     @include typography(80px, 700, 80px, normal, $black);
+
+                    @include xl-large {
+                        font-size: 65px;
+                        line-height: 63px;
+                        margin-bottom: 43px;
+                    }
+                    @include medium {
+                        width: 100%;
+                        text-align: center;
+                        letter-spacing: -0.5px;
+                        @include typography(36px, 700, 42px, normal, $black);
+                    }
                 }
                 .hero__paragraph {
                     width: 88.33%;
                     margin-bottom: 51px;
                     @include typography(18px, 400, 28px, normal, $medium-grey);
+
+                    @include xl-large {
+                        margin-bottom: 30px;
+                    }
+                    @include medium {
+                        width: 100%;
+                        text-align: center;
+                        @include typography(16px, 400, 26px, normal, $medium-grey);
+                    }
                 }
             }
             .hero__icons {
@@ -38,6 +89,15 @@
                 height: auto;
                 flex-wrap: wrap;
                 @include flex-group(flex, space-between, center);
+                @include medium {
+                    margin-bottom: 90px;
+                    width: 100%;
+                    padding: 0 16px;
+                    img {
+                        width: 81px;
+                        height: 26px;
+                    }
+                }
             }
         }
 
@@ -45,8 +105,32 @@
             width: 33.33%;
             height: 100%;
             display: flex;
-            img {
+
+            @include xl-large {
+                width: 40%;
+            }
+
+            @include medium {
                 width: 100%;
+                order: 1;
+                margin-bottom: 47.75px;
+            }
+
+            .img-desktop{
+                display: block;
+                width: 100%;
+
+                @include medium {
+                    display: none;
+                }
+            }
+            .img-mobile{
+                display: none;
+
+                @include medium {
+                    display: block;
+                    width: 100%;
+                }
             }
         }
     }
