--- a/sass/components/_dropdown.scss
+++ b/sass/components/_dropdown.scss
@@ -14,16 +14,23 @@
     .dropdown-content {
         width: 153px;
         height: 160px;
+        padding: 24px;
         margin-top: 20px;
         border-radius: 10px;
-        right: 0;
-        position: absolute;
-        z-index: 1;
         background: $white;
-        padding: 24px;
+        position: absolute;
+        right: 0;
+        z-index: 1;
         display: none;
         box-shadow: 0px 10px 40px 0px rgba(0, 0, 0, 0.15);
         
+        @include medium{
+            position: relative;
+            padding: 0;
+            margin-left: 23px;
+            margin-bottom: 24px;
+            box-shadow: none;
+        }
 
         .dropdown__link {
             text-decoration: none;
@@ -32,6 +39,11 @@
             &:hover {
                 color: $black;
             }
+
+            @include medium {
+                font-size: 16px;
+            }
+
             .dropdown__img {
                 margin-right: 15px;
             }
@@ -41,6 +53,11 @@
             width: 116px;
             height: 128px;
             left: 0;
+
+            @include medium {
+                width: 100%;
+                height: auto;
+            }
         }
 
         &.dropdown-content--show {
@@ -50,5 +67,3 @@
         }
     }
 }
-
-
