--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -1,7 +1,11 @@
 .logo {
-    width: 25%;
+    width: 15.35%;
     display: flex;
     align-items: center;
+
+    @include m-large {
+        width: 17%;
+    }
 
     @include medium {
         width: 87px;
@@ -10,5 +14,4 @@
             width: 100%;
         }
     }
-
 }
