--- a/sass/components/_nabvar.scss
+++ b/sass/components/_nabvar.scss
@@ -10,29 +10,24 @@
     }
 
     .navbar__routing {
-        width: 44%;
+        width: 100%;
         @include flex-group(flex, space-between, center);
 
-        @include xl-large {
-            width: 60%;
-        }
-
         .navbar__items {
-            width: 75%;
+            width: 100%;
+            display: flex;
+            justify-content: space-between;
             @include medium {
-                opacity: 0;
+                width: 43%;
                 visibility: hidden;
+                opacity: 0;
                 position: absolute;
                 top: 0;
                 right: 0;
-                width: 43%;
-                padding: 2rem;
                 bottom: 0;
                 box-shadow: 0 0 0 100vmax rgba(0, 0, 0, 0.75);
-                display: flex;
                 flex-direction: column;
-                align-items: end;
-                gap: 32px;
+                @include flex-group(flex, flex-start, end);
             }
             &.navbar__items--visibility {
                 opacity: 1;
@@ -40,19 +35,26 @@
                 @include medium {
                     width: 240px;
                     background: $white;
-                    padding: 0;
+                    padding: 21.98px 20px 0 24px;
                 }
             }
             .items {
-                width: 100%;
+                width: 39.85%;
                 list-style-type: none;
                 @include flex-group(flex, space-between, center);
                 @include typography(14px, 400, 16px, normal, $medium-grey);
 
+                @include m-large {
+                    width: 50%;
+                }
+
                 @include medium {
+                    width: 100%;
+                    padding: 0;
+                    font-size: 16px;
+                    margin-bottom: 32px;
                     flex-direction: column;
                     align-items: flex-start;
-                    padding: 0 0 0 24px;
 
                     li:not(:last-child){
                         margin-bottom: 16px;
@@ -66,6 +68,10 @@
                         color: $black;
                     }
 
+                    @include medium {
+                        margin-bottom: 24px;
+                    }
+
                     img {
                         margin-left: 9px;
                     }
@@ -77,7 +83,7 @@
 
 
     .navbar__auth {
-        width: 13.52%;
+        width: 19%;
         @include flex-group(flex, space-between, center);
 
         @include xl-large {
@@ -85,12 +91,12 @@
         }
 
         @include m-large {
-            width: 20%;
+            width: 25%;
         }
 
         @include medium {
-            width: 23%;
-            display: none;
+            width: 100%;
+            flex-direction: column;
         }
 
         .login {
@@ -101,7 +107,10 @@
                 color: $black;
             }
 
+            @include medium {
+                margin-bottom: 16px;
+            }
+
         }
     }
 }
-
