--- a/css/styles.css
+++ b/css/styles.css
@@ -105,7 +105,7 @@ body {
 }
 @media (max-width: 767px) {
   .nabvar .navbar__routing .navbar__items {
-    width: 43%;
+    /* width: 43%; */
     visibility: hidden;
     opacity: 0;
     position: absolute;
@@ -393,6 +393,7 @@ body {
   .main .hero .hero__description .hero__texts .hero__title {
     width: 100%;
     text-align: center;
+    margin-bottom: 16px;
     letter-spacing: -0.5px;
     font-size: 36px;
     font-weight: 700;
@@ -419,6 +420,7 @@ body {
   .main .hero .hero__description .hero__texts .hero__paragraph {
     width: 100%;
     text-align: center;
+    margin-bottom: 24px;
     font-size: 16px;
     font-weight: 400;
     line-height: 26px;
@@ -457,8 +459,7 @@ body {
 }
 @media (max-width: 767px) {
   .main .hero .hero__img {
-    width: 100vw;
-    order: 1;
+    width: 100%;
     margin-bottom: 47.75px;
   }
 }
