--- a/sass/components/_nabvar.scss
+++ b/sass/components/_nabvar.scss
@@ -18,7 +18,7 @@
             display: flex;
             justify-content: space-between;
             @include medium {
-                width: 43%;
+                /* width: 43%; */
                 visibility: hidden;
                 opacity: 0;
                 position: absolute;
